# ros2_ws

chapt2/: .gitignore
chapt2/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/demo_cpp_pkg/src/: cpp_node.cpp  person_node.cpp
chapt3/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/src/status_display/: CMakeLists.txt  package.xml
chapt3/src/status_display/src/: helloQT.cpp
chapt3/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/src/status_interfaces/msg/: NoNoNo.msg  SystemStatus.msg
chapt4/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt6/: .gitignore
chapt6/src/fishbot_description/: CMakeLists.txt  package.xml
chapt6/src/fishbot_description/rviz2/: display_robot_model.rviz
chapt6/src/fishbot_description/urdf/: fish_robot.urdf
chapt6/src/fishbot_description/urdf/fishbot/: base.urdf.xacro  fish_bot.urdf.xacro
chapt6/src/fishbot_description/world/room/: model.sdf
chapt7/src/fishbot_application/: package.xml  setup.py
chapt7/src/fishbot_application/fishbot_application/: get_robot_pose.py  init_robot_pose.py
chapt7/src/fishbot_description/: CMakeLists.txt
chapt7/src/fishbot_description/launch/: display_robot.launch.py  gazebo.launch.py
chapt7/src/fishbot_description/urdf/: fish_robot.xacro
chapt7/src/fishbot_description/world/: custom_room.world
chapt7/src/fishbot_navigation2/: CMakeLists.txt  package.xml
chapt7/src/fishbot_navigation2/config/: nav2_params.yaml
chapt7/src/fishbot_navigation2/maps/: room.pgm  room.yaml
(+11 files in other folders)
